# wyl_asr

./: .dockerignore  .gitignore  ASR 实时语音识别系统.md  CLAUDE.md  Dockerfile  LICENSE  QUICK_START.md  README.md  README_EN.md  check_serial_ports.py  compare_audio_sources.py  diagnose_audio_levels.py  local_models.conf  main.py  organize_models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_2pass_server.sh  run_2pass_simple.sh  run_traditional_server.sh  start.bat  start.sh  start_all.sh  start_with_serial.bat  start_with_serial.sh  stop_all.sh  verify_sensevoice_params.py  功能说明书.md  操作说明书.html  操作说明书.md  语音转换规格说明书 2025-12-24.docx
VoiceRecognitionDisplay/: Directory.Build.props  VoiceRecognitionDisplay.sln  build-all.sh  build-android-overlay.sh  build-android.bat  build-android.sh  build-linux.sh  build-macos.sh  build-windows.bat  check-android-setup.sh  check-overlay-permission.sh  debug-overlay-window.sh  diagnose-android-install.sh  find-android-sdk.bat  fix-and-build.sh  fix-android-sdk-path.sh  generate_icons.py  get-crash-log.sh  install-android-sdk.bat  install-android-workload.bat  install-android-workload.sh  install-sdk-components.sh  pull-android-logs.sh  read-device-log.sh  rebuild-android-clean.sh  run-macos.sh  run.bat  run.sh  set-android-env.bat  setup-android-sdk-macos.sh  setup-android-sdk-windows.bat  test-android-overlay.sh  test_android_buttons.sh  test_android_width.sh  test_crash_fix.sh  test_settings_flow.sh  test_websocket_server.py  view-android-logs.sh  快速开始.md  构建指南.md  (+1 more)
config/: config.py  serial_config.yaml  xfyun_config.json
diagrams/: upload-audio-recognition-flow.excalidraw
scripts/: build_obfuscated.bat  build_obfuscated.sh  download_opus_mt.py  obfuscate_modules.py  obfuscate_python.py  simple_obfuscate.py
subtitle_display/: .gitignore  App.axaml  App.axaml.cs  INTEGRATION_GUIDE.md  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  QUICKSTART.md  README.md  SubtitleDisplay.csproj  build.bat  build.sh  run.bat  run.sh  test_websocket.py
tests/: audio_analysis_report.json  audio_device_test.py  check_models.py  test_2pass_offline_only.py  test_async_parallel_processing.py  test_audio_duration_handling.py  test_audio_processing_monitor.py  test_complete_pipeline.py  test_database_api.py  test_database_api_security_fixes.py  test_database_data_check.py  test_database_manager.py  test_disable_vad_feature.py  test_document_crud_operations.py  test_document_download.py  test_document_save.py  test_document_save_demo.py  test_edge_cases.py  test_function_consistency.py  test_hotword_manager.py  test_large_document_save.py  test_meeting_27_verification.py  test_meeting_emotion_analysis.py  test_meeting_save_complete.py  test_meeting_workflow_safety_guards.py  test_microphone_realtime.py  test_module_integration.py  test_multiple_connections.py  test_offline_speaker_only.py  test_onnx_model_loading.py  test_reconnection.py  test_sensevoice_parameters_integration.py  test_separate_asr_speaker_timing.py  test_simple_connection.py  test_speaker_diarization.py  test_speaker_labeling_fix.py  (+14 more)
ui/: README.md  (+7 more)
(+164 files in other folders)
